--- a/encuesta-influ.html
+++ b/encuesta-influ.html
@@ -170,7 +170,8 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
-            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a></p>
+            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a> | <a
+                    href="./books.html">Ver libros publicados</a></p>
             <p>La voz del futuro no tiene rostro.</p>
         </div>
     </footer>
