--- a/influencers.html
+++ b/influencers.html
@@ -89,7 +89,7 @@
                 <div class="action-card">
                     <h3>Tu Perfil</h3>
                     <p>Gestiona tu cuenta y seguridad.</p>
-                    <a href="./perfil.html" class="btn btn-secondary">Ir a ajustes</a>
+                    <a href="./perfil-influ.html" class="btn btn-secondary">Ir a ajustes</a>
                 </div>
             </section>
 
@@ -100,12 +100,12 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
-            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a></p>
-            <p>La voz del futuro no tiene rostro.</p>
-        </div>
-    </footer>
+    <div class="container">
+        <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
+        <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a> | <a href="./books.html">Ver libros publicados</a></p>
+        <p>La voz del futuro no tiene rostro.</p>
+    </div>
+</footer>
 
     <script>
         Parse.initialize("S88jCtz1uP0qT7s0Fe1fp9aJzUB7YmjIuHd5o06p", "XlOB40PLJiE7LXcAL4rww2HM4ksg9u6YbEPGRhJz");
