--- a/login-influ.html
+++ b/login-influ.html
@@ -39,7 +39,7 @@
 
         <div class="header-actions">
             <!-- Botón Área de creador de contenido -->
-            
+
             <!-- Botón Área de escritor (igual que estaba) -->
             <a href="./login.html" class="writer-area-link" aria-label="Acceder al área privada de escritor">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
@@ -95,7 +95,8 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
-            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a></p>
+            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a> | <a
+                    href="./books.html">Ver libros publicados</a></p>
             <p>La voz del futuro no tiene rostro.</p>
         </div>
     </footer>
