--- a/login.html
+++ b/login.html
@@ -92,7 +92,8 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
-            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a></p>
+            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a> | <a
+                    href="./books.html">Ver libros publicados</a></p>
             <p>La voz del futuro no tiene rostro.</p>
         </div>
     </footer>
@@ -105,7 +106,7 @@
             <a href="./aviso-legal.html" class="btn btn-text">Más información</a>
         </div>
     </div>
-    
+
 
     <!-- Botón flotante de Telegram -->
     <a href="https://t.me/adea_oficial" id="floating-telegram" aria-label="Contactar por Telegram">
@@ -137,7 +138,7 @@
             }
         }
 
-        
+
 
         document.addEventListener('DOMContentLoaded', () => {
             // === COOKIE BANNER ===
