--- a/perfil-influ.html
+++ b/perfil-influ.html
@@ -168,7 +168,7 @@
             </section>
 
             <div class="back-to-panel">
-                <a href="./panel.html" class="btn btn-text">← Volver al panel</a>
+                <a href="./influencers.html" class="btn btn-text">← Volver al panel</a>
             </div>
         </div>
     </main>
