--- a/encuesta.html
+++ b/encuesta.html
@@ -143,7 +143,9 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
-            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a></p>
+            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a> | <a
+                    href="./books.html">Ver libros publicados</a></p>
+            <p>La voz del futuro no tiene rostro.</p>
         </div>
     </footer>
     <div id="cookie-banner" class="cookie-banner hidden">
