--- a/faq.html
+++ b/faq.html
@@ -103,11 +103,9 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <p>&copy;<a href="./index.html" style="color:#b0a595; text-decoration:underline;">2025 AdEA — Asociación de
-                    Escritores Ɐnónimos</a></p>
-            <p><a href="./aviso-legal.html" style="color:#b0a595; text-decoration:underline;">Aviso legal</a> |
-                <a href="./faq.html" style="color:#b0a595; text-decoration:underline;">Preguntas frecuentes</a>
-            </p>
+            <p>&copy; 2025 AdEA — Asociación de Escritores Ɐnónimos</p>
+            <p><a href="./aviso-legal.html">Aviso legal</a> | <a href="./faq.html">Preguntas frecuentes</a> | <a
+                    href="./books.html">Ver libros publicados</a></p>
             <p>La voz del futuro no tiene rostro.</p>
         </div>
     </footer>
